--- a/app/src/main/res/layout/activity_register_screen.xml
+++ b/app/src/main/res/layout/activity_register_screen.xml
@@ -8,7 +8,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".MainActivity">
+    tools:context=".RegisterScreen">
 
     <androidx.cardview.widget.CardView
         android:layout_width="wrap_content"
@@ -30,7 +30,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Log in to AMS"
+        android:text="Sign up to use AMS"
         android:textSize="24sp"
         android:textColor="@color/white"
         android:layout_gravity="center_horizontal"
@@ -58,7 +58,19 @@
                 android:layout_height="48dp"
                 android:hint="Email"
                 android:padding="8dp"
+                android:inputType="textEmailAddress"
                 android:layout_marginTop="25dp"
+                android:layout_marginHorizontal="12dp"
+                android:textColorHint="@color/material_dynamic_neutral30"
+                android:background="@drawable/editbg"
+                />
+            <EditText
+                android:layout_width="match_parent"
+                android:layout_height="48dp"
+                android:hint="Full Name"
+                android:padding="8dp"
+                android:inputType="text"
+                android:layout_marginTop="8dp"
                 android:layout_marginHorizontal="12dp"
                 android:textColorHint="@color/material_dynamic_neutral30"
                 android:background="@drawable/editbg"
@@ -68,6 +80,18 @@
                 android:layout_height="48dp"
                 android:hint="Password"
                 android:padding="8dp"
+                android:inputType="textPassword"
+                android:layout_marginTop="8dp"
+                android:layout_marginHorizontal="12dp"
+                android:textColorHint="@color/material_dynamic_neutral30"
+                android:background="@drawable/editbg"
+                />
+            <EditText
+                android:layout_width="match_parent"
+                android:layout_height="48dp"
+                android:hint="Confirm Password"
+                android:padding="8dp"
+                android:inputType="textPassword"
                 android:layout_marginTop="8dp"
                 android:layout_marginHorizontal="12dp"
                 android:textColorHint="@color/material_dynamic_neutral30"
@@ -80,23 +104,12 @@
                 android:layout_marginTop="8dp"
                 />
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Forgot Password?"
-                android:layout_gravity="end"
-                android:layout_marginHorizontal="8dp"
-                android:textColor="@color/black"
-                android:textSize="20sp"
-                android:textStyle="bold"
-                android:layout_marginTop="8dp"
-                android:letterSpacing=".05"
-                />
+
             <androidx.appcompat.widget.AppCompatButton
                 android:layout_width="match_parent"
                 android:layout_height="45dp"
                 android:layout_marginHorizontal="12dp"
-                android:text="Login"
+                android:text="Sign Up"
                 android:textColor="@color/white"
                 android:textStyle="bold"
                 android:textSize="18sp"
@@ -110,7 +123,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="45dp"
                 android:layout_marginHorizontal="12dp"
-                android:text="Create Account"
+                android:text="Back to Login"
                 android:textColor="@color/white"
                 android:textStyle="bold"
                 android:textSize="18sp"
@@ -156,34 +169,62 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
+                android:layout_marginTop="10dp"
+                android:padding="8dp"
                 android:layout_marginHorizontal="12dp"
+                android:gravity="center"
+
                 >
-                <View
-                    android:layout_width="0dp"
-                    android:layout_height="3dp"
-                    android:layout_marginTop="12dp"
-                    android:layout_weight="1"
-                    android:background="@color/material_dynamic_neutral80"
-                    />
-                <TextView
+                <androidx.cardview.widget.CardView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Or"
-                    android:textColor="@color/black"
-                    android:textSize="20sp"
-                    android:layout_marginHorizontal="5dp"
-                    android:textAlignment="center"
-                    android:textStyle="bold"
-                    android:letterSpacing=".05"
-                    />
+                    app:cardCornerRadius="8dp"
+                    android:layout_marginHorizontal="15dp"
+                    android:backgroundTint="#00000000"
+                    >
+                    <ImageView
+                        android:id="@+id/twitter"
+                        android:layout_width="50dp"
+                        android:layout_height="50dp"
+                        android:scaleType="fitXY"
+                        android:layout_gravity="center"
+                        android:src="@drawable/twitter"
+                        />
+                </androidx.cardview.widget.CardView>
+                <androidx.cardview.widget.CardView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:cardCornerRadius="8dp"
+                    app:cardElevation="4dp"
+                    android:backgroundTint="#00000000"
+                    android:layout_marginHorizontal="55dp"
 
-                <View
-                    android:layout_width="0dp"
-                    android:layout_height="3dp"
-                    android:layout_marginTop="12dp"
-                    android:layout_weight="1"
-                    android:background="@color/material_dynamic_neutral80"
-                    />
+                    >
+                    <ImageView
+                        android:id="@+id/facebook"
+                        android:layout_width="50dp"
+                        android:layout_height="50dp"
+                        android:layout_gravity="center"
+                        android:src="@drawable/fb"
+                        />
+                </androidx.cardview.widget.CardView>
+
+                <androidx.cardview.widget.CardView
+                    android:layout_width="50dp"
+                    android:layout_height="wrap_content"
+                    app:cardCornerRadius="8dp"
+                    app:cardElevation="4dp"
+                    android:backgroundTint="#00000000"
+                    android:layout_marginHorizontal="15dp"
+                    >
+                    <ImageView
+                        android:id="@+id/instagram"
+                        android:layout_width="50dp"
+                        android:layout_height="50dp"
+                        android:src="@drawable/insta"
+                        android:layout_gravity="center"
+                        />
+                </androidx.cardview.widget.CardView>
             </LinearLayout>
 
         </LinearLayout>
